--- a/INSTALL
+++ b/INSTALL
@@ -1,9 +1,9 @@
-Building SmallChange
+Building KakaCocoin
 
-See doc/readme-qt.rst for instructions on building smallchange-qt,
+See doc/readme-qt.rst for instructions on building kakacocoin-qt,
 the intended-for-end-users, nice-graphical-interface, reference
-implementation of SmallChange.
+implementation of KakaCocoin.
 
-See doc/build-*.txt for instructions on building smallchange,
+See doc/build-*.txt for instructions on building kakacocoin,
 the intended-for-services, no-graphical-interface, reference
-implementation of SmallChange.
+implementation of KakaCocoin.
